third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_single_unpack_invalid.exp

Diagnostics:
error: expected `bool` but found `u64`
   ┌─ tests/checking/typing/type_variable_join_single_unpack_invalid.move:11:10
   │
11 │         (f2: bool);
   │          ^^

error: expected `bool` but found `u64`
   ┌─ tests/checking/typing/type_variable_join_single_unpack_invalid.move:14:10
   │
14 │         (f2: Box<bool>);
   │          ^^
